Add blog "Towards Encrypted Large Language Models with FHE"  (#1301)
* Towards Encrypted Large Language Models with FHE

* Add blog to yaml and add assets

* fix review @bcm-at-zama

* Fix review and add more links to source code

* add diagram + review

* fix typo

* Fix review and move images to documentation repo

* Update blog date

---------

Co-authored-by: jfrery <jordan.frery@zama.ai>

--- a/_blog.yml
+++ b/_blog.yml
@@ -2571,3 +2571,15 @@
     - cv
     - diffusion
     - game-dev
+
+- local: encrypted-llm
+  title: "Towards Encrypted Large Language Models with FHE"
+  author: RomanBredehoft
+  thumbnail: /blog/assets/encrypted-llm/thumbnail.png
+  date: August 02, 2023
+  tags:
+    - guide
+    - privacy
+    - research
+    - FHE
+    - llm
