--- a/_blog.yml
+++ b/_blog.yml
@@ -2575,6 +2575,7 @@
 - local: encrypted-llm
   title: "Towards Encrypted Large Language Models with FHE"
   author: RomanBredehoft
+  guest: true
   thumbnail: /blog/assets/encrypted-llm/thumbnail.png
   date: August 02, 2023
   tags:
