[wip] Swift Core ML LLMs

--- a/_blog.yml
+++ b/_blog.yml
@@ -2593,3 +2593,14 @@
   tags:
     - announcement 
     - research
+
+- local: swift-coreml-llm
+  title: "Swift Tools for On-Device LLM Inference with Core ML"
+  author: pcuenq
+  thumbnail: /blog/assets/swift-coreml-llm/thumbnail.png
+  date: August 4, 2023
+  tags:
+    - guide
+    - coreml
+    - llm
+    - swift
