Apply additional suggestions.
Co-authored-by: Merve Noyan <merveenoyan@gmail.com>
Co-authored-by: Omar Sanseviero <osanseviero@gmail.com>
Co-authored-by: Vaibhav Srivastav <vaibhavs10@gmail.com>

--- a/_blog.yml
+++ b/_blog.yml
@@ -2604,7 +2604,7 @@
     - guide
 
 - local: swift-coreml-llm
-  title: "Swift Tools for On-Device LLM Inference with Core ML"
+  title: "Releasing Swift Transformers: Run On-Device LLMs in Apple Devices"
   author: pcuenq
   thumbnail: /blog/assets/swift-coreml-llm/thumbnail.png
   date: August 7, 2023
