Swift Core ML tools for LLMs (#1365)
* [wip] Swift Core ML LLMs

* Apply suggestions from code review

Co-authored-by: Joshua Lochner <admin@xenova.com>

* [swift-transformers] update draft.

* Update generation text with feedback from Joshua.

* Apply suggestions from code review

Co-authored-by: Merve Noyan <merveenoyan@gmail.com>
Co-authored-by: Omar Sanseviero <osanseviero@gmail.com>
Co-authored-by: Vaibhav Srivastav <vaibhavs10@gmail.com>

* Apply additional suggestions.

Co-authored-by: Merve Noyan <merveenoyan@gmail.com>
Co-authored-by: Omar Sanseviero <osanseviero@gmail.com>
Co-authored-by: Vaibhav Srivastav <vaibhavs10@gmail.com>

* Add thumbnail - thanks Merve!

Co-authored-by: Merve Noyan <merveenoyan@gmail.com>

* Date + minor changes.

---------

Co-authored-by: Joshua Lochner <admin@xenova.com>
Co-authored-by: Merve Noyan <merveenoyan@gmail.com>
Co-authored-by: Omar Sanseviero <osanseviero@gmail.com>
Co-authored-by: Vaibhav Srivastav <vaibhavs10@gmail.com>

--- a/_blog.yml
+++ b/_blog.yml
@@ -2602,3 +2602,14 @@
   tags:
     - audio 
     - guide
+
+- local: swift-coreml-llm
+  title: "Releasing Swift Transformers: Run On-Device LLMs in Apple Devices"
+  author: pcuenq
+  thumbnail: /blog/assets/swift-coreml-llm/thumbnail.png
+  date: August 8, 2023
+  tags:
+    - guide
+    - coreml
+    - llm
+    - swift
