Add DeepFloyd If deployment blog post (#1320)
* Add DeepFloyd If deployment blog post

* Update the blog post

* Update the blog post

* Update the blog post

* blog code formatting

* Fix image link

--- a/_blog.yml
+++ b/_blog.yml
@@ -2623,3 +2623,16 @@
     - rl
     - rlhf
     - nlp
+    
+- local: deploy-deepfloydif-using-bentoml
+  title: "Deploying Hugging Face Models with BentoML: DeepFloyd IF in Action"
+  author: Sherlockk
+  guest: true
+  thumbnail: /blog/assets/deploy-deepfloydif-using-bentoml/thumbnail.png
+  date: August 9, 2023
+  tags:
+    - deployment
+    - open-source-collab
+    - bentoml
+    - guide
+    - diffusers
