Add blog post about optimizing a TTS model using Transformer features (#1353)
* add bark optimization blogpost

* add thumbnail

* Update optimizing-bark.md

* Apply suggestions from Sanchit code review

Co-authored-by: Sanchit Gandhi <93869735+sanchit-gandhi@users.noreply.github.com>

* remove box in thumbnail

* add audio examples and output of code snippet

* modify a bit the intro

* Apply suggestions from code review

Co-authored-by: Vaibhav Srivastav <vaibhavs10@gmail.com>

* Modify colab links to colab github notebooks

* nits nb_loop -> nb_loops

Co-authored-by: Sanchit Gandhi <93869735+sanchit-gandhi@users.noreply.github.com>

* Update _blog.yml

* a few modifs

* update thumbnail

---------

Co-authored-by: Sanchit Gandhi <93869735+sanchit-gandhi@users.noreply.github.com>
Co-authored-by: Vaibhav Srivastav <vaibhavs10@gmail.com>

--- a/_blog.yml
+++ b/_blog.yml
@@ -2636,3 +2636,14 @@
     - bentoml
     - guide
     - diffusers
+
+- local: optimizing-bark
+  title: "Optimizing a Text-To-Speech model using 🤗 Transformers"
+  author: ylacombe
+  thumbnail: /blog/assets/bark_optimization/thumbnail.png
+  date: August 9, 2023
+  tags:
+    - text-to-speech
+    - optimization
+    - benchmark
+    - bark
