ADD Marketplace blog (#1379)
* add

* add suggestion

* change thubmnail

* Update aws-marketplace.md

Co-authored-by: Jeff Boudier <74218629+jeffboudier@users.noreply.github.com>

* Update aws-marketplace.md

Co-authored-by: Jeff Boudier <74218629+jeffboudier@users.noreply.github.com>

* Update aws-marketplace.md

Co-authored-by: Jeff Boudier <74218629+jeffboudier@users.noreply.github.com>

* Update aws-marketplace.md

Co-authored-by: Jeff Boudier <74218629+jeffboudier@users.noreply.github.com>

* Update aws-marketplace.md

Co-authored-by: Jeff Boudier <74218629+jeffboudier@users.noreply.github.com>

* Update aws-marketplace.md

Co-authored-by: Jeff Boudier <74218629+jeffboudier@users.noreply.github.com>

* Update aws-marketplace.md

Co-authored-by: Jeff Boudier <74218629+jeffboudier@users.noreply.github.com>

* Update aws-marketplace.md

Co-authored-by: Jeff Boudier <74218629+jeffboudier@users.noreply.github.com>

* Update aws-marketplace.md

Co-authored-by: Jeff Boudier <74218629+jeffboudier@users.noreply.github.com>

* Update aws-marketplace.md

Co-authored-by: Jeff Boudier <74218629+jeffboudier@users.noreply.github.com>

* Update aws-marketplace.md

Co-authored-by: Simon Brandeis <33657802+SBrandeis@users.noreply.github.com>

* Update aws-marketplace.md

Co-authored-by: Simon Brandeis <33657802+SBrandeis@users.noreply.github.com>

* Update aws-marketplace.md

Co-authored-by: Jeff Boudier <74218629+jeffboudier@users.noreply.github.com>

* Update aws-marketplace.md

Co-authored-by: Jeff Boudier <74218629+jeffboudier@users.noreply.github.com>

* canged title

---------

Co-authored-by: Jeff Boudier <74218629+jeffboudier@users.noreply.github.com>
Co-authored-by: Simon Brandeis <33657802+SBrandeis@users.noreply.github.com>

--- a/_blog.yml
+++ b/_blog.yml
@@ -2647,3 +2647,14 @@
     - optimization
     - benchmark
     - bark
+
+- local: aws-marketplace
+  title: "Hugging Face Platform on the AWS Marketplace: Pay with your AWS Account"
+  author: philschmid
+  thumbnail: /blog/assets/158_aws_marketplace/thumbnail.jpg
+  date: August 10, 2023
+  tags:
+    - guide
+    - announcement
+    - partnerships
+    - aws
