--- a/_blog.yml
+++ b/_blog.yml
@@ -2679,3 +2679,14 @@
     - research
     - nlp
     - cv
+
+- local: safecoder
+  title: "Introducing SafeCoder"
+  author: jeffboudier
+  thumbnail: /blog/assets/159_safecoder/safecoder.png
+  date: August 22, 2023
+  tags:
+    - announcement
+    - partnerships
+    - vmware
+    - bigcode
