--- a/_blog.yml
+++ b/_blog.yml
@@ -2572,14 +2572,14 @@
     - diffusion
     - game-dev
 
-- external: https://www.youtube.com/watch?v=t8Ek1aOtaQw
+- local: writer-case-study
   title: "Leveraging Hugging Face for complex generative AI use cases"
   author: jeffboudier
   date: July 1, 2023
   tags:
     - case-studies
     
-- external: https://snorkel.ai/snorkel-hugging-face-unlock-foundation-models-for-enterprise/
+- local: snorkel-case-study
   title: "Snorkel AI x Hugging Face: unlock foundation models for enterprises"
   author: Friea Berg
   guest: true
@@ -2587,7 +2587,7 @@
   tags:
     - case-studies
     
-- external: https://medium.com/mantisnlp/why-were-switching-to-hugging-face-inference-endpoints-and-maybe-you-should-too-829371dcd330
+- local: mantis-case-study
   title: "Why we’re switching to Hugging Face Inference Endpoints, and maybe you should too"
   author: mattupson
   guest: true
@@ -2595,15 +2595,8 @@
   tags:
     - case-studies
 
-- external: https://www.genomicsengland.co.uk/blog/de-identify-pathology-reports
-  title: "Developing an algorithm to de-identify pathology reports"
-  author: arogeriogel
-  guest: true
-  date: March 3, 2023
-  tags:
-    - case-studies
 
-- external: https://www.databricks.com/blog/contributing-spark-loader-for-hugging-face-datasets
+- local: databricks-case-study
   title: "Databricks ❤️ Hugging Face: up to 40% faster training and tuning of Large Language Models"
   author: alighodsi
   guest: true
