--- a/_blog.yml
+++ b/_blog.yml
@@ -2660,7 +2660,7 @@
     - aws
 
 - local: gptq-integration
-  title: "Making the LLMs lighter with AutoGPTQ, transformers and optimum"
+  title: "Making LLMs lighter with AutoGPTQ, transformers and optimum"
   author: marcsun13
   thumbnail: /blog/assets/159_autogptq_transformers/thumbnail.jpg
   date: August 23, 2023
