--- a/_blog.yml
+++ b/_blog.yml
@@ -2671,7 +2671,7 @@
     - bigcode
 
 - local: idefics
-  title: "Introducing IDEFICS: An Open Reproduction of State-of-the-art Visual Langage Model"
+  title: "Introducing IDEFICS: An Open Reproduction of State-of-the-art Visual Language Model"
   author: VictorSanh
   thumbnail: /blog/assets/idefics/thumbnail.png
   date: August 22, 2023
