--- a/_blog.yml
+++ b/_blog.yml
@@ -2672,7 +2672,7 @@
 - local: safecoder
   title: "Introducing SafeCoder"
   author: jeffboudier
-  thumbnail: /blog/assets/159_safecoder/safecoder.png
+  thumbnail: /blog/assets/159_safecoder/safecoder.jpg
   date: August 22, 2023
   tags:
     - announcement
