--- a/_blog.yml
+++ b/_blog.yml
@@ -1797,6 +1797,7 @@
   title: "Why we’re switching to Hugging Face Inference Endpoints, and maybe you should too"
   author: mattupson
   guest: true
+  thumbnail: /blog/assets/78_ml_director_insights/mantis1.png
   date: February 15, 2023
   tags:
     - case-studies
@@ -1995,6 +1996,7 @@
   title: "Snorkel AI x Hugging Face: unlock foundation models for enterprises"
   author: Friea Berg
   guest: true
+  thumbnail: /blog/assets/78_ml_director_insights/snorkel.png
   date: April 6, 2023
   tags:
     - case-studies
@@ -2054,8 +2056,7 @@
   title: "Databricks ❤️ Hugging Face: up to 40% faster training and tuning of Large Language Models"
   author: alighodsi
   guest: true
-  author: maddiedawson
-  guest: true
+  thumbnail: /blog/assets/78_ml_director_insights/databricks.png
   date: April 26, 2023
   tags:
     - case-studies
@@ -2455,6 +2456,7 @@
 - local: writer-case-study
   title: "Leveraging Hugging Face for complex generative AI use cases"
   author: jeffboudier
+  thumbnail: /blog/assets/78_ml_director_insights/writer.png
   date: July 1, 2023
   tags:
     - case-studies
