--- a/_blog.yml
+++ b/_blog.yml
@@ -1797,6 +1797,7 @@
   title: "Why we’re switching to Hugging Face Inference Endpoints, and maybe you should too"
   author: mattupson
   guest: true
+  thumbnail: /blog/assets/78_ml_director_insights/mantis1.png
   date: February 15, 2023
   tags:
     - case-studies
