Apply suggestions from code review
Co-authored-by: Pedro Cuenca <pedro@huggingface.co>
Co-authored-by: Omar Sanseviero <osanseviero@gmail.com>

--- a/_blog.yml
+++ b/_blog.yml
@@ -2681,7 +2681,7 @@
     - bigcode
 
 - local: gptq-integration
-  title: "Making LLMs lighter with AutoGPTQ, transformers"
+  title: "Making LLMs lighter with AutoGPTQ and transformers"
   author: marcsun13
   thumbnail: /blog/assets/159_autogptq_transformers/thumbnail.jpg
   date: August 23, 2023
