Add: zh/optimizing-bark.md
Signed-off-by: Yao, Matrix <matrix.yao@intel.com>

Update: zh/optimizing-bark.md

--- a/zh/_blog.yml
+++ b/zh/_blog.yml
@@ -819,3 +819,14 @@
     - rlhf
     - nlp
 
+- local: optimizing-bark
+  title: "使用 🤗 Transformers 优化 Bark"
+  author: ylacombe
+  thumbnail: /blog/assets/bark_optimization/thumbnail.png
+  date: August 9, 2023
+  tags:
+    - text-to-speech
+    - optimization
+    - benchmark
+    - bark
+
