--- a/_blog.yml
+++ b/_blog.yml
@@ -2680,3 +2680,12 @@
     - vmware
     - bigcode
 
+- local: gptq-integration
+  title: "Making LLMs lighter with AutoGPTQ and transformers"
+  author: marcsun13
+  thumbnail: /blog/assets/159_autogptq_transformers/thumbnail.jpg
+  date: August 23, 2023
+  tags:
+    - llm
+    - optimization
+    - quantization
