New case studies (#1361)
* Add files via upload

* Create writer-case-study.md

* Update writer-case-study.md

* Update _blog.yml

* Create snorkel-case-study.md

* Update _blog.yml

* Create mantis-case-study.md

* Create genomicsengland-case-study.md

* Create databricks-case-study.md

* Add files via upload

* Update mantis-case-study.md

* Update snorkel-case-study.md

* Update _blog.yml

* Update writer-case-study.md

* Update mantis-case-study.md

* Update mantis-case-study.md

* Update mantis-case-study.md

* Update mantis-case-study.md

* Update databricks-case-study.md

* Update _blog.yml

* Update _blog.yml

* Update _blog.yml

* Update _blog.yml

* Delete mantis.png

* Update snorkel-case-study.md

* Delete genomicsengland-case-study.md

* Delete genomics.png

--- a/_blog.yml
+++ b/_blog.yml
@@ -1792,6 +1792,15 @@
     - fine-tuning
     - community
     - dreambooth
+    
+- local: mantis-case-study
+  title: "Why we’re switching to Hugging Face Inference Endpoints, and maybe you should too"
+  author: mattupson
+  guest: true
+  thumbnail: /blog/assets/78_ml_director_insights/mantis1.png
+  date: February 15, 2023
+  tags:
+    - case-studies
 
 - local: blip-2
   title: "Zero-shot image-to-text generation with BLIP-2"
@@ -1982,6 +1991,14 @@
     - rl
     - rlhf
     - nlp
+    
+- local: snorkel-case-study
+  title: "Snorkel AI x Hugging Face: unlock foundation models for enterprises"
+  author: VioletteLepercq
+  thumbnail: /blog/assets/78_ml_director_insights/snorkel.png
+  date: April 6, 2023
+  tags:
+    - case-studies
 
 - local: owkin-substra
   title: "Creating Privacy Preserving AI with Substra"
@@ -2033,6 +2050,15 @@
   tags:
     - partnerships
     - community
+
+- local: databricks-case-study
+  title: "Databricks ❤️ Hugging Face: up to 40% faster training and tuning of Large Language Models"
+  author: alighodsi
+  guest: true
+  thumbnail: /blog/assets/78_ml_director_insights/databricks.png
+  date: April 26, 2023
+  tags:
+    - case-studies
 
 - local: tf_tpu
   title: "Training a language model with 🤗 Transformers using TensorFlow and TPUs"
@@ -2425,6 +2451,14 @@
     - nlp
     - cv
     - hardware
+
+- local: writer-case-study
+  title: "Leveraging Hugging Face for complex generative AI use cases"
+  author: jeffboudier
+  thumbnail: /blog/assets/78_ml_director_insights/writer.png
+  date: July 1, 2023
+  tags:
+    - case-studies
 
 - local: text-to-webapp
   title: "Making a web app generator with open ML models"
