compress images and add thumbnail

--- a/_blog.yml
+++ b/_blog.yml
@@ -2723,3 +2723,14 @@
     - llm
     - optimization
     - quantization
+
+
+- local: ram-efficient-pytorch-fsdp
+  title: "Fine-tuning Llama 2 70B using PyTorch FSDP"
+  author: smangrul
+  thumbnail: /blog/assets/160_fsdp_llama/thumbnail.jpg
+  date: August XX, 2023
+  tags:
+    - llm
+    - guide
+    - nlp
