Deprecation of Git Authentication using password (#1393)
* Draft: blog post about password git deprecation

* Update password-git-deprecation.md

* Apply suggestions from code review

Co-authored-by: Julien Chaumond <julien@huggingface.co>

* Update password-git-deprecation.md

* Add thumb

* Apply suggestions from code review

Co-authored-by: Pedro Cuenca <pedro@huggingface.co>

* Update password-git-deprecation.md

* Apply suggestions from code review

Co-authored-by: Pierric Cistac <Pierrci@users.noreply.github.com>

* Update password-git-deprecation.md

* Update password-git-deprecation.md

Co-authored-by: Julien Chaumond <julien@huggingface.co>

* Adding a sentence about ssh and token advantage, add in blog

* Apply suggestions from code review

Co-authored-by: Pierric Cistac <Pierrci@users.noreply.github.com>

* Update _blog.yml

---------

Co-authored-by: Julien Chaumond <julien@huggingface.co>
Co-authored-by: Pedro Cuenca <pedro@huggingface.co>
Co-authored-by: Pierric Cistac <Pierrci@users.noreply.github.com>

--- a/_blog.yml
+++ b/_blog.yml
@@ -2723,3 +2723,12 @@
     - llm
     - optimization
     - quantization
+
+- local: password-git-deprecation
+  title: "Deprecation of Git Authentication using password"
+  author: Sylvestre
+  thumbnail: /blog/assets/password-git-deprecation/thumbnail.png
+  date: August 25, 2023
+  tags:
+    - announcement
+    - security
