--- a/_blog.yml
+++ b/_blog.yml
@@ -2732,3 +2732,14 @@
   tags:
     - announcement
     - security
+
+- local: codellama
+  title: "Llama 2 learns to code" 
+  author: philschmid
+  thumbnail: /blog/assets/160_codellama/thumbnail.jpg
+  date: August 25, 2023
+  tags:
+    - nlp
+    - community
+    - research
+    - LLM
