--- a/_events.yml
+++ b/_events.yml
@@ -3,6 +3,11 @@
 #                                             (e.g. specifying event date range like Jan 24 to Feb 7, 2022)
 # pro tip: put strings e.g. name or description in "quotes" or do not include special characters incl. ':' '[' 
 
+- name: "The Race to Open-Source ChatGPT"
+  link: bit.ly/3siFNMF
+  date: September 1, 2023
+  description: "Join Lewis Tunstall at FlowGPT's PromptCon for a talk on the exciting developments around open-source chatbots."
+
 - name: "Hugging Cast v4 - Live AI News and Demos"
   link: https://streamyard.com/watch/ujrA4pG3ixAm
   date: July 27, 2023
