--- a/_events.yml
+++ b/_events.yml
@@ -4,7 +4,7 @@
 # pro tip: put strings e.g. name or description in "quotes" or do not include special characters incl. ':' '[' 
 
 - name: "The Race to Open-Source ChatGPT"
-  link: bit.ly/3siFNMF
+  link: https://us06web.zoom.us/webinar/register/WN_Veu65U_zQryiN0E8DNkzUA?t=1693401002754
   date: September 1, 2023
   description: "Join Lewis Tunstall at FlowGPT's PromptCon for a talk on the exciting developments around open-source chatbots."
 
