--- a/_blog.yml
+++ b/_blog.yml
@@ -2743,3 +2743,13 @@
     - community
     - research
     - LLM
+
+- local: audioldm2
+  title: "AudioLDM 2, but faster ⚡️"
+  author: sanchit-gandhi
+  thumbnail: /blog/assets/161_audioldm2/thumbnail.jpg
+  date: Aug 30, 2023
+  tags:
+    - guide
+    - audio
+    - diffusers
