--- a/_blog.yml
+++ b/_blog.yml
@@ -2755,13 +2755,13 @@
     - diffusers
     - diffusion
 
-- local: t
-  title: "AudioLDM 2, but faster ⚡️"
-  author: sanchit-gandhi
-  thumbnail: /blog/assets/161_audioldm2/thumbnail.png
-  date: Aug 30, 2023
+- local: falcon-180b
+  title: "Spread Your Wings: Falcon 180B is here"
+  author: philschmid
+  thumbnail: /blog/assets/162_falcon_180b/thumbnail.jpg
+  date: September 5, 2023
   tags:
-    - guide
-    - audio
-    - diffusers
-    - diffusion
+    - nlp
+    - community
+    - research
+    - LLM
