--- a/_blog.yml
+++ b/_blog.yml
@@ -2754,3 +2754,14 @@
     - audio
     - diffusers
     - diffusion
+
+- local: falcon-180b
+  title: "Spread Your Wings: Falcon 180B is here"
+  author: philschmid
+  thumbnail: /blog/assets/162_falcon_180b/thumbnail.jpg
+  date: September 6, 2023
+  tags:
+    - nlp
+    - community
+    - research
+    - LLM
