Fix YAML issue.

--- a/zh/_blog.yml
+++ b/zh/_blog.yml
@@ -884,8 +884,8 @@
     - announcement
     - security
 
-  - local: falcon-180b
-  title: ""Falcon 180B 现已登陆 Hugging Face Hub"
+- local: falcon-180b
+  title: "Falcon 180B 现已登陆 Hugging Face Hub"
   author: philschmid
   thumbnail: /blog/assets/162_falcon_180b/thumbnail.jpg
   date: September 6, 2023
