slightly change the title

--- a/_blog.yml
+++ b/_blog.yml
@@ -2767,7 +2767,7 @@
     - LLM
 
 - local: t2i-sdxl-adapters
-  title: "Efficient Controllable Generation for SDXL with T2I Adapters"
+  title: "Efficient Controllable Generation for SDXL with T2I-Adapters"
   author: Adapter
   guest: true
   thumbnail: /blog/assets/t2i-sdxl-adapters/thumbnail.png
