add overview_quantization blogpost

--- a/_blog.yml
+++ b/_blog.yml
@@ -2777,3 +2777,16 @@
     - collaboration
     - diffusers
     - diffusion
+
+- local: overview-quantization-transformers
+  title: "Overview of natively supported quantization schemes in 🤗 Transformers"
+  author: ybelkada
+  thumbnail: /blog/assets/163_overview_quantization_transformers/thumbnail.jpg
+  date: Septembre 12, 2023
+  tags:
+    - llm
+    - optimization
+    - quantization
+    - comparison
+    - bitsandbytes
+    - gptq
