Add Wuertschen draft

--- a/_blog.yml
+++ b/_blog.yml
@@ -2785,3 +2785,13 @@
   date: September 11, 2023
   tags:
     - bigcode
+
+- local: wuertschen
+  title: "Introducing Würtschen: Fast Diffusion for Image Generation"
+  author: dome272
+  thumbnail: /blog/assets/wuertschen/thumbnail.png
+  date: September 12, 2023
+  tags:
+    - diffusion
+    - diffusers
+    - text-to-image
