add Overview quantization blogpost (#1472)
* add overview_quantization blogpost

* Apply suggestions from code review

Co-authored-by: Younes Belkada <49240599+younesbelkada@users.noreply.github.com>

* change thumbnail

* fix order

* Update _blog.yml

Co-authored-by: Younes Belkada <49240599+younesbelkada@users.noreply.github.com>

* Update overview-quantization-transformers.md

Co-authored-by: Omar Sanseviero <osanseviero@gmail.com>

* Apply suggestions from code review

Co-authored-by: Pedro Cuenca <pedro@huggingface.co>

* 4-bit and 8-bit fix

* clarification about adapters with bnb

* add generation doc

* add link

* replace thumbnail again

---------

Co-authored-by: Younes Belkada <49240599+younesbelkada@users.noreply.github.com>
Co-authored-by: Omar Sanseviero <osanseviero@gmail.com>
Co-authored-by: Pedro Cuenca <pedro@huggingface.co>

--- a/_blog.yml
+++ b/_blog.yml
@@ -2777,7 +2777,7 @@
     - collaboration
     - diffusers
     - diffusion
-
+    
 - local: safecoder-vs-closed-source-code-assistants
   title: "SafeCoder vs. Closed-source Code Assistants"
   author: julsimon
@@ -2785,3 +2785,16 @@
   date: September 11, 2023
   tags:
     - bigcode
+
+- local: overview-quantization-transformers
+  title: "Overview of natively supported quantization schemes in 🤗 Transformers"
+  author: ybelkada
+  thumbnail: /blog/assets/163_overview_quantization_transformers/thumbnail.jpg
+  date: September 12, 2023
+  tags:
+    - llm
+    - optimization
+    - quantization
+    - comparison
+    - bitsandbytes
+    - gptq
